nav button visibiltiy fix

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -308,3 +308,10 @@ footer h2{
     }
         
 }
+
+@media (max-width: $desktop){
+    .nav-buttons{
+        display: none;
+    }
+
+}
